# cynical_c99

./: CMakeLists.txt
data/shaders/: default_frag.glsl  default_material.mat_def  default_vert.glsl
run_tree/data/: config.data
run_tree/data/shaders/: common.inc  default_frag.glsl  default_material.mat_def  default_shader.glsl  default_text_renderer.glsl  default_text_renderer.mat_def  frag_include.inc  full_shader.glsl  text_renderer.mat_def  text_renderer_shader.glsl  texture_renderer_material.mat_def  texture_renderer_shader.glsl  vert_include.inc
run_tree/data/tests/: default_sprite_shader.glsl  default_uniforms.glsl
run_tree/data/tests/pong/: pong_sprite_material.mat_def
src/: common.h  engine.c  engine.h  file.c  file.h  graphics.c  graphics.h  hot_reloader.c  hot_reloader.h  input.c  input.h  main.c  memory.c  memory.h  pong.c  resource.h  resource_manager.c  resource_manager.h  resources.c  resources.h  stb_image.h  string_helper.c  string_helper.h  text.c  text.h
src/_TRASH/: test_memory.h  test_resource_manager.h
src/math/: mat4.c  mat4.iln  maths.h  quat.c  quat.h  quat.iln  rect.h  rect.iln  test.h  transform.h  transform.iln  vec2.c  vec2.h  vec2.iln  vec3.c  vec3.h  vec3.iln  vec4.c  vec4.h  vec4.iln
src/test_games/: asteroids.c  pong.c
